# advent-of-code-2025

./: .gitignore  CMakeLists.txt
Day01/: CMakeLists.txt  main.cpp
Day01/part1/: part1.cpp
Day01/part2/: part2.cpp
Day02/: CMakeLists.txt  main.cpp
Day02/part1/: part1.cpp  part1.h
Day02/part2/: part2.cpp  part2.h
Day03/part1/: part1.cpp  part1.h
Day03/part2/: part2.cpp  part2.h
Day04/: CMakeLists.txt
Day04/part1/: part1.cpp  part1.h
Day04/part2/: part2.cpp  part2.h
Day05/: CMakeLists.txt  input-2.txt
Day05/part1/: part1.cpp  part1.h
Day05/part2/: part2.cpp  part2.h
Day06/: CMakeLists.txt
Day06/part1/: part1.cpp  part1.h
Day06/part2/: part2.cpp  part2.h
Day07/: CMakeLists.txt
Day07/part1/: part1.cpp  part1.h
Day07/part2/: part2.cpp  part2.h
Day08/: CMakeLists.txt
Day08/part1/: part1.cpp  part1.h
Day08/part2/: part2.cpp  part2.h
Day09/: CMakeLists.txt
Day09/part1/: part1.cpp  part1.h
Day09/part2/: part2.cpp
Day10/: CMakeLists.txt
Day10/part1/: part1.cpp  part1.h
Day10/part2/: part2.cpp  part2.h
Day11/: CMakeLists.txt
Day11/part1/: part1.cpp  part1.h
Day11/part2/: part2.cpp  part2.h
Day12/: CMakeLists.txt
Day12/part2/: part2.h
common/: CMakeLists.txt  LightState.h  Utils.h
common/template/part1/: part1.cpp
common/template/part2/: part2.h
